[project]
name = "secure-rag-slack-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slack>=0.0.2",
    "slack-bolt>=1.20.1",
    "langgraph-cli>=0.1.52",
    "langgraph-sdk>=0.1.32",
]

[project.scripts]
secure-rag-slack-langgraph = "secure_rag_slack_langgraph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
